--- a/public/index.html
+++ b/public/index.html
@@ -4,8 +4,50 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My path in IT industry</title>
+    <link rel="stylesheet" href="output.css">
+    <link rel="shortcut icon" type="image/x-icon" href="images/favicon.ico" />
 </head>
-<body>
-        
+<body class="h-screen w-screen bg-gradient-to-b from-grad-t to-grad-b font-lato">
+    <!-- główny kontener -->
+    <div class="h-screen flex flex-col">
+        <!-- kontener na menu -->
+        <menu class="flex items-start justify-center text-xl font-semibold">
+                <ul class="flex items-center mt-5">
+                    <li class=""><a href=""><img src="images/kot.png" alt="cat-icon" width="50px" class="flex rounded-full border-2 border-black "></a></li>
+                    <li class="ml-8 mr-5 p-2 pl-8 pr-8 border-2 border-black bg-slate-100 rounded-lg z-5"><a href="index.html">HOME</a></li>
+                    <li class=" mr-5 p-2 pl-8 pr-8 border-2 border-black bg-slate-100 rounded-lg"><a href="about-me.html">ABOUT ME</a></li>
+                    <li class=" mr-5 p-2 pl-8 pr-8 border-2 border-black bg-slate-100 rounded-lg"><a href="blog.js">BLOG</a></li>
+                    <li class=" mr-5 p-2 pl-8 pr-8 border-2 border-black bg-slate-100 rounded-lg"><a href="https://github.com/JustFiesta">GITHUB</a></li>
+                    <li class=" mr-8 p-2 pl-8 pr-8 border-2 border-black bg-slate-100 rounded-lg"><a href="contact.html">CONTACT</a></li>
+                    <li class=""><a href=""><img src="images/search-white.png" alt="search-loop" width="30px" class="rounded"></a></li>
+                </ul>
+        </menu>
+
+        <!-- kontener na artykuły -->
+        <main class="flex flex-auto flex-col items-center justify-center text-neutral-200">
+            <h1 class="text-6xl m-10 p-5">Dodaj podtytuł</h1>
+            <article class="text-xl m-10 p-5">Dodaj tekst</article>
+        </main>
+
+        <!-- kontener na stopkę -->
+        <footer class="bottom-0 items-end">
+            <ul class="flex justify-center">
+                <li class="p-3"><a target="_blank" href="www.linkedin.com/in/mateusz-bocak-331549244"><img src="images/icons8-linkedin-50.png" alt="linkedin-icon" width="50px"></a></li>
+                <li class="p-3 ml-4"><a target="_blank" href="https://github.com/JustFiesta"><img src="images/icons8-github-50.png" alt="github-icon" width="50px"></a></li>
+                <li class="p-3 ml-4"><a target="_blank" href="discordapp.com/users/460858124421562368"><img src="images/icons8-discord-50.png" alt="discord-icon" width="50px"></a></li>
+            </ul>
+
+            <!-- addnotacje -->
+            <div class="flex flex-col justify-center text-center">
+                <span class="p-3 flex flex-row justify-center text-center text-slate-600"><p>Copyright 2023</p>&nbsp; <p class="text-light-orange hover:text-cyan-300">&copy;</p> &nbsp; <p>Mateusz Bocak</p></span>
+                <div class="flex justify-center text-esm text-slate-600">
+                    <p><a target="_blank" href="https://icons8.com/icon/30888/discord">Discord</a> icon by <a target="_blank" href="https://icons8.com">Icons8</a>&nbsp;</p>
+                    <p><a target="_blank" href="https://icons8.com/icon/12599/github">GitHub</a> icon by <a target="_blank" href="https://icons8.com">Icons8</a>&nbsp;</p>
+                    <p><a target="_blank" href="https://icons8.com/icon/30888/discord">Discord</a> icon by <a target="_blank" href="https://icons8.com">Icons8</a></p>
+                </div>
+            </div>
+        </footer>
+    </div>
+    <script src=""></script>
 </body>
 </html>
