finished website sketch and layout

--- a/public/about-me.html
+++ b/public/about-me.html
@@ -24,9 +24,15 @@
         </menu>
 
         <!-- kontener na artykuły -->
-        <main class="flex flex-auto flex-col items-center justify-center text-neutral-200">
-            <h1 class="text-6xl m-10 p-5">Dodaj podtytuł</h1>
-            <article class="text-xl m-10 p-5">Dodaj tekst</article>
+        <main class="flex flex-auto flex-col items-center text-neutral-200">
+            <!-- header -->
+            <div>
+                <h1 class="text-6xl m-10 p-5 ">About me</h1>
+            </div>
+            <!-- contents -->
+            <div class="w-full h-full flex justify-center">
+                <article class="text-xl m-10 p-5">Dodaj tekst</article>
+            </div>
         </main>
 
         <!-- kontener na stopkę -->
