--- a/public/contact.html
+++ b/public/contact.html
@@ -13,7 +13,7 @@
         <!-- kontener na menu -->
         <menu class="flex items-start justify-center text-xl font-bold">
                 <ul class="flex items-center mt-5">
-                    <a href=""><li><img src="images/kot.png" alt="cat-icon" width="50px" class="flex rounded-full border-1 border-black "></li></a>
+                    <a href="https://www.youtube.com/watch?v=oHg5SJYRHA0" target="_blank"><li><img src="images/kot.png" alt="cat-icon" width="50px" class="flex rounded-full border-1 border-black "></li></a>
                     <a href="index.html"><li class="ml-5 menu-icon">HOME</li></a>
                     <a href="about-me.html"><li class="menu-icon">ABOUT_ME</li></a>
                     <a href="blog.js"><li class="menu-icon">BLOG</li></a>
@@ -24,9 +24,15 @@
         </menu>
 
         <!-- kontener na artykuły -->
-        <main class="flex flex-auto flex-col items-center justify-center text-neutral-200">
-            <h1 class="text-6xl m-10 p-5">Dodaj podtytuł</h1>
-            <article class="text-xl m-10 p-5">Dodaj tekst</article>
+        <main class="flex flex-auto flex-col items-center text-neutral-200">
+            <!-- header -->
+            <div>
+                <h1 class="text-6xl m-10 p-5 ">You can find me here:</h1>
+            </div>
+            <!-- contents -->
+            <div class="w-full h-full flex justify-center">
+                <article class="text-xl m-10 p-5">Dodaj tekst</article>
+            </div>
         </main>
 
         <!-- kontener na stopkę -->
