--- a/public/index.html
+++ b/public/index.html
@@ -32,9 +32,9 @@
         <!-- kontener na stopkę -->
         <footer class="bottom-0 items-end">
             <ul class="flex justify-center">
-                <li class="p-3"><a target="_blank" href="www.linkedin.com/in/mateusz-bocak-331549244"><img src="images/icons8-linkedin-50.png" alt="linkedin-icon" width="50px"></a></li>
+                <li class="p-3"><a target="_blank" href="https://www.linkedin.com/in/mateusz-bocak-331549244"><img src="images/icons8-linkedin-50.png" alt="linkedin-icon" width="50px"></a></li>
                 <li class="p-3 ml-4"><a target="_blank" href="https://github.com/JustFiesta"><img src="images/icons8-github-50.png" alt="github-icon" width="50px"></a></li>
-                <li class="p-3 ml-4"><a target="_blank" href="discordapp.com/users/460858124421562368"><img src="images/icons8-discord-50.png" alt="discord-icon" width="50px"></a></li>
+                <li class="p-3 ml-4"><a target="_blank" href="https://discordapp.com/users/460858124421562368"><img src="images/icons8-discord-50.png" alt="discord-icon" width="50px"></a></li>
             </ul>
 
             <!-- addnotacje -->
