Animated menu + subsites sketch

--- a/public/about-me.html
+++ b/public/about-me.html
@@ -12,15 +12,15 @@
     <div class="h-screen flex flex-col">
         <!-- kontener na menu -->
         <menu class="flex items-start justify-center text-xl font-bold">
-                <ul class="flex items-center mt-5">
-                    <a href=""><li><img src="images/kot.png" alt="cat-icon" width="50px" class="flex rounded-full border-1 border-black "></li></a>
-                    <a href="index.html"><li class="ml-5 menu-icon">HOME</li></a>
-                    <a href="about-me.html"><li class="menu-icon">ABOUT_ME</li></a>
-                    <a href="blog.js"><li class="menu-icon">BLOG</li></a>
-                    <a href="https://github.com/JustFiesta" target="_blank"><li class="menu-icon">GITHUB</li></a>
-                    <a href="contact.html"><li class="mr-8 menu-icon">CONTACT</li></a>
-                    <a href=""><li class=""><img src="images/search-white.png" alt="search-loop" width="30px" class="rounded"></li></a>
-                </ul>
+            <ul class="flex items-center mt-5">
+                <a href="https://www.youtube.com/watch?v=oHg5SJYRHA0" target="_blank"><li class=" enlarge-on-hover"><img src="images/kot.png" alt="cat-icon" width="50px" class="flex rounded-full border-1 border-black "></li></a>
+                <a href="index.html"><li class="ml-5 menu-icon enlarge-on-hover">HOME</li></a>
+                <a href="about-me.html"><li class="menu-icon enlarge-on-hover">ABOUT_ME</li></a>
+                <a href="blog.js"><li class="menu-icon enlarge-on-hover">BLOG</li></a>
+                <a href="https://github.com/JustFiesta" target="_blank"><li class="menu-icon enlarge-on-hover">GITHUB</li></a>
+                <a href="contact.html"><li class="mr-8 menu-icon enlarge-on-hover">CONTACT</li></a>
+                <a href=""><li class=""><img src="images/search-white.png" alt="search-loop" width="30px" class="rounded"></li></a>
+            </ul>
         </menu>
 
         <!-- kontener na artykuły -->
@@ -37,10 +37,10 @@
 
         <!-- kontener na stopkę -->
         <footer class="bottom-0 items-end">
-            <ul class="flex justify-center">
-                <li class="p-3"><a target="_blank" href="www.linkedin.com/in/mateusz-bocak-331549244"><img src="images/icons8-linkedin-50.png" alt="linkedin-icon" width="50px"></a></li>
-                <li class="p-3 ml-4"><a target="_blank" href="https://github.com/JustFiesta"><img src="images/icons8-github-50.png" alt="github-icon" width="50px"></a></li>
-                <li class="p-3 ml-4"><a target="_blank" href="discordapp.com/users/460858124421562368"><img src="images/icons8-discord-50.png" alt="discord-icon" width="50px"></a></li>
+            <ul class="flex justify-center ">
+                <li class="p-3 enlarge-on-hover"><a target="_blank" href="https://www.linkedin.com/in/mateusz-bocak-331549244"><img src="images/icons8-linkedin-50.png" alt="linkedin-icon" width="50px"></a></li>
+                <li class="p-3 ml-4 enlarge-on-hover"><a target="_blank" href="https://github.com/JustFiesta"><img src="images/icons8-github-50.png" alt="github-icon" width="50px"></a></li>
+                <li class="p-3 ml-4 enlarge-on-hover"><a target="_blank" href="https://discordapp.com/users/460858124421562368"><img src="images/icons8-discord-50.png" alt="discord-icon" width="50px"></a></li>
             </ul>
 
             <!-- addnotacje -->
